# syphon

./: .gitignore  README.md  penmp  pyproject.toml  requirements.txt  setup.py
src/syphon/ensemble/_hist_gradient_boosting/: binning.py  common.pxd  common.pyx  gradient_boosting.py  grower.py  histogram.c  histogram.pyx  splitter.pyx  utils.pyx
